fixed label spacing

--- a/stylesheets/work.scss
+++ b/stylesheets/work.scss
@@ -209,6 +209,7 @@
 				span {
 					font-family: "Circular-bold";
 					font-size: 13px;
+					padding-left: 7px;
 				}
 			}
 
@@ -447,11 +448,6 @@ border: 0;
 border-top: 1px solid #cccccc;
 }
 
-span.share-text {
-    margin-left: 6px;
-}
-
-
 a.red.read-full {
     width: 120px;
 }
@@ -589,6 +585,11 @@ a.red.read-full {
 
 // WEBPACK FOOTER //
 // webpack:///stylesheets/Users/jpimenta/pheno-com/stylesheets/work.scss
+
+
+// WEBPACK FOOTER //
+// webpack:///stylesheets/Users/jpimenta/pheno-com/stylesheets/work.scss
+
 
 
 // WEBPACK FOOTER //
